<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height"
    android:background="@color/action_bar_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_17"
            android:text="@string/wifi_sync_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:id="@+id/ivWifiInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_75"
            android:src="@mipmap/wifi_sync_wifi_info" />

        <TextView
            android:id="@+id/tvWifiTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivWifiInfo"
            android:layout_marginLeft="11dp"
            android:layout_toRightOf="@id/ivWifiInfo"
            android:gravity="top"
            android:text="@string/wifi_connection_tip"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16" />


        <TextView
            android:id="@+id/tvWifiInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ivWifiInfo"
            android:layout_alignLeft="@id/tvWifiTip"
            android:layout_below="@id/tvWifiTip"
            android:layout_toRightOf="@id/ivWifiInfo"
            android:gravity="top"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />

        <ImageView
            android:id="@+id/ivIpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivWifiInfo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="39dp"
            android:src="@mipmap/wifi_sync_ip_info"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tvIpTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivIpInfo"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@id/ivIpInfo"
            android:gravity="top"
            android:text="@string/wifi_sync_ip_tip"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />


        <TextView
            android:id="@+id/tvIpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ivIpInfo"
            android:layout_alignLeft="@id/tvIpTip"
            android:layout_below="@id/tvIpTip"
            android:layout_toRightOf="@id/ivIpInfo"
            android:gravity="top"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/wifi_async_bottom_black">

        <LinearLayout
            android:id="@+id/wifiActivity_emptyImageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_117"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_sync_tip_top"
                android:textColor="@color/wifi_async_tip_text"
                android:textSize="@dimen/text_size_18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/wifi_sync_tip_bottom"
                android:textColor="@color/wifi_async_tip_text"
                android:textSize="@dimen/text_size_18"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

        <GridView
            android:id="@+id/wifi_sync_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="@dimen/dp_15"
            android:verticalSpacing="@dimen/image_vertical_space"
            android:numColumns="3"
            android:visibility="invisible"
            android:scrollbars="none"
            >
        </GridView>
    </RelativeLayout>

</LinearLayout>